# planner

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.win32  NEWS  README  acinclude.m4  autogen.sh  config.h.win32  configure.ac  configure.in  libplanner-1.pc.in  planner.doap  planner.spec.in
data/: .cvsignore  .gitignore  Makefile.am  planner.1  planner.desktop.in  planner.desktop.in.in  planner.rc.in  planner.schemas.in  svn-commit.tmp
data/dtd/: mrproject-0.5.1.dtd  mrproject-0.6.dtd
data/glade/: .cvsignore  Makefile.am  add-predecessor.glade  calendar-dialog.glade  column-dialog.glade  eds.glade  group-dialog.glade  html-output.glade  mpp-bugzilla.glade  new-property.glade  project-properties.glade  property-dialog.glade  resource-dialog.glade  resource-input-dialog.glade  sql.glade  task-date-widget.glade  task-dialog.glade  task-input-dialog.glade
data/images/: Makefile.am
data/mime/: .cvsignore  .gitignore  Makefile.am  planner.applications  planner.keys.in  planner.mime  planner.xml.in
data/sql/: Makefile.am  database-0.11.sql  database-0.13.sql  database.sql  upgrade-0.11-0.13.sql
data/stylesheets/: Makefile.am  html1_css.xsl  html1_css_ie.xsl  html1_css_ie7.xsl  html1_gantt.xsl  html1_milestones.xsl  html1_resources.xsl  html1_tasks.xsl  localizable.xml  mrproject2html.xsl  msp2planner.xsl  planner2html.xsl  planner2plannerv011.xsl
data/ui/: Makefile.am  bugzilla-plugin.ui  cost-plugin.ui  eds-plugin.ui  gantt-view.ui  html-plugin.ui  main-window.ui  msp-plugin.ui  python-plugin.ui  resource-limit-plugin.ui  resource-view.ui  sql-plugin.ui  task-view.ui  time-table-view.ui  xml-planner-plugin.ui
docs/: DateFormat  Links  Makefile.am  Makefile.win32  Scheduling  getting-started-hacking.xml  mrp-class-diagram.dia  mrp-project-interaction-diagram.dia
docs/libplanner/: .cvsignore  Makefile.am  libplanner-docs.sgml  libplanner-sections.txt  libplanner.types
docs/sql/: Makefile.am  README  README.sql  database-0.11.sql  upgrade-0.6.x-0.11.sql
docs/user-guide/: .gitignore  Makefile.am  Makefile.win32
dotnet/: Makefile.am
dotnet/libplanner/: .cvsignore  Makefile.am  libplanner-api.xml  libplanner.metadata
dotnet/samples/: Example01.cs  Example10.cs  Makefile.am
dotnet/sources/: Makefile  planner-sources.xml
eds-backend/: Makefile.am  e-cal-backend-planner-factory.c  e-cal-backend-planner-factory.h  e-cal-backend-planner.c  e-cal-backend-planner.h
eds-backend/docs/: ChangeLog  README  TODO  Testing  Testing-alfa4  Testing-alfa6  Testing-alfa7  Work-alfa7  Work-alfa8
eds-backend/planner-source/: .cvsignore  org-gnome-planner-source.eplug.in  planner-source.c
eds-backend/utils/: create-planner-source.c
examples/: Makefile.am  project-x.mrproject  sample-1.planner
examples/user-guide/: gantt-view.mrproject  group1-task.mrproject
installer/: .gitattributes  english.nsh  langmacros.nsh  planner-installer.nsi
installer/languages/: ChangeLog  dutch.nsh  english.nsh
libegg/: Makefile.am
libegg/recent-files/: Makefile.am  egg-recent-item.c  egg-recent-item.h  egg-recent-model.c  egg-recent-model.h  egg-recent-util.c  egg-recent-vfs-utils.c  egg-recent-vfs-utils.h  egg-recent-view-bonobo.c  egg-recent-view-bonobo.h  egg-recent-view-gtk.c  egg-recent-view-gtk.h  egg-recent-view-uimanager.c  egg-recent-view.h
libplanner/: .cvsignore  .gitignore  Makefile.am  Makefile.win32  mrp-application.c  mrp-application.h  mrp-assignment.c  mrp-assignment.h  mrp-calendar.c  mrp-calendar.h  mrp-day.c  mrp-day.h  mrp-error.c  mrp-error.h  mrp-file-module.c  mrp-file-module.h  mrp-group.c  mrp-group.h  mrp-intl.h  mrp-marshal-main.c  mrp-marshal.list  mrp-mpx.c  mrp-object.c  mrp-object.h  mrp-old-xml.c  mrp-old-xml.h  mrp-parser.c  mrp-parser.h  mrp-paths-gnome.c  mrp-paths-win32.c  mrp-paths.h  mrp-private.h  mrp-project.c  mrp-project.h  mrp-property.c  mrp-property.h  mrp-relation.c  mrp-relation.h  mrp-resource.c  mrp-resource.h  (+23 more)
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.win32  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  (+39 more)
po-libplanner/: .cvsignore  ChangeLog  Makefile.in.in  POTFILES.in  POTFILES.skip  am.po  az.po  be.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fa.po  fr.po  hi.po  hr.po  hu.po  is.po  it.po  ja.po  kn.po  ko.po  lv.po  mk.po  ml.po  mn.po  ms.po  nl.po  nn.po  no.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sr@Latn.po  sv.po  (+3 more)
python/: .cvsignore  .gitignore  Makefile.am  planner-arg-types.py  planner-types.defs  planner.defs  planner.override  plannermodule.c  plannerui-types.defs  plannerui.defs  plannerui.override  planneruimodule.c  python-demo.py  test.py
src/: .cvsignore  .gitignore  Makefile.am  Makefile.win32  dummy-canvas-item.c  dummy-canvas-item.h  eel-canvas-rect.c  eel-canvas-rect.h  planner-application.c  planner-application.h  planner-assignment-model.c  planner-assignment-model.h  planner-calendar-dialog.c  planner-calendar-dialog.h  planner-calendar-selector.c  planner-calendar-selector.h  planner-calendar.c  planner-calendar.h  planner-canvas-line.c  planner-canvas-line.h  planner-cell-renderer-date.c  planner-cell-renderer-date.h  planner-cell-renderer-list.c  planner-cell-renderer-list.h  planner-cell-renderer-popup.c  planner-cell-renderer-popup.h  planner-cmd-manager.c  planner-cmd-manager.h  planner-column-dialog.c  planner-column-dialog.h  planner-conf-gconf.c  planner-conf-win32.c  planner-conf.h  planner-day-type-dialog.c  planner-day-type-dialog.h  planner-default-week-dialog.c  planner-default-week-dialog.h  planner-eds-plugin.c  planner-format.c  planner-format.h  (+117 more)
tests/: .cvsignore  Makefile.am  calendar-test.c  cmd-manager-test.c  scheduler-test.c  self-check.c  self-check.h  task-test.c  time-test.c
tests/files/: Makefile.am  test-1.planner
tests/python/: task-test.py
tools/: strip_trailing_white_space.sh
(+26 files in other folders)
